k8s-game/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackjack-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackjack
  template:
    metadata:
      labels:
        app: blackjack
    spec:
      containers:
      - name: blackjack
        image: prodactil/blackjack-terminal:latest
        ports:
        - containerPort: 7681
        tty: true                # <<< ESENȚIAL
        stdin: true              # <<< ESENȚIAL
        imagePullPolicy: Always
