k8s-game/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blackjack-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: blackjack.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blackjack-service
                port:
                  number: 80
