k8s-game/service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blackjack-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: blackjack.game.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blackjack-service
            port:
              number: 80
